--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>FocusFlow - Student Study Session Monitoring</title>
+    <title>Mindful Focus Companion</title>
     <meta name="description" content="Monitor your study sessions with real-time micro:bit sensor data. Track focus, manage distractions, and improve your learning habits with actionable insights." />
     <meta name="author" content="FocusFlow" />
 
